# findwords

./: .gitignore  BUILD  ChangeLog  Makefile.am  README  README.md  configure.ac  dodeb.sh  gengitver.sh
build-aux/: git-version-gen  gitlog-to-changelog
debian/: changelog  control  copyright  rules
debian/tests/: control
doc/: local.mk  permute.texi  version.texi
man/: Makefile.am  findwords.1  permute.1  permute.x
man/man1/: Makefile.am  findwords.1
po/: LINGUAS  Makefile.am  Makevars  POTFILES  POTFILES.in  en.po  es.po  ms.po  permute.pot
src/: FindPermutations.cpp  Makefile.am  findwords.cpp  findwords.h  gitversion.h  permute.cpp  permute.h
tests/: ChecksumFiles.inc  Makefile.am  atlocal.in  test1.cmd  test1.inp.stderr.O0.sha1  test1.inp.stdout.O0.sha1  test1.shalog.O0.sha1  test10.cmd  test10.shalog.O0.sha1  test11.cmd  test11.shalog.O0.sha1  test12.cmd  test12.shalog.O0.sha1  test2.cmd  test2.shalog.O0.sha1  test3.cmd  test4.cmd  test4.shalog.O0.sha1  test5.cmd  test6.cmd  test7.cmd  test7.shalog.O0.sha1  test8.cmd  test9.cmd  testrunner.inp.sh  testsuite.at
tests/m4/: atenv.m4
